<resources>
    <string name="app_name">Kaplan Task</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="account">My Account</string>
    <string name="settings">Settings</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="close_app">Close App</string>
    <string name="accounts_fragment">Accounts Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="favorites">Favorites</string>
    <string name="about_us">About Us</string>
    <string name="category">Category</string>
    <string name="category_fashion">Fashion</string>
    <string name="Electronics">Electronics</string>
    <string name="category_sports">Sports</string>
    <string name="favorites_electronics">Electronics</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="user_name">Yoonus Cheroor</string>
    <string name="user_email">yoonus@gmail.com</string>
    <string name="my_orders">My Orders</string>
    <string name="general">General</string>
    <string name="personal">Personal</string>
    <string name="privacy_policies"><![CDATA[Privacy & Policies]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_vestibulum_ante_ipsum_primis_in_faucibus_orci_luctus_et_ultrices_posuere_cubilia_curae_nullam_eu_malesuada_neque_integer_a_neque_mauris_vivamus_eu_ex_id_turpis_pulvinar_cursus_at_eget_justo_in_et_feugiat_nunc_sed_eleifend_dui_vel_ligula_vestibulum_ullamcorper">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam eu malesuada neque. Integer a neque mauris. Vivamus eu ex id turpis pulvinar cursus at eget justo. In et feugiat nunc. Sed eleifend dui vel ligula vestibulum ullamcorper.</string>
</resources>
