<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Each item id should be same as in the nav_graph fragment id-->

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_category"
        android:title="@string/category" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites" />



    <item
        android:id="@+id/accountsFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />

    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about_us" />

</menu>